ricardo/http/httpclient_parser.rl.cc
#line 1 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
/**
*
* Copyright (c) 2010, Zed A. Shaw and Mongrel2 Project Contributors.
* All rights reserved.
* 
* Redistribution and use in source and binary forms, with or without
* modification, are permitted provided that the following conditions are
* met:
* 
*     * Redistributions of source code must retain the above copyright
*       notice, this list of conditions and the following disclaimer.
* 
*     * Redistributions in binary form must reproduce the above copyright
*       notice, this list of conditions and the following disclaimer in the
*       documentation and/or other materials provided with the distribution.
* 
*     * Neither the name of the Mongrel2 Project, Zed A. Shaw, nor the names
*       of its contributors may be used to endorse or promote products
*       derived from this software without specific prior written
*       permission.
* 
* THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
* IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
* THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
* PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
* CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
* EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
* PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
* PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
* LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
* NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
* SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/

#include "http/httpclient_parser.h"
#include <stdio.h>
#include <assert.h>
#include <stdlib.h>
#include <ctype.h>
#include <string.h>
#include "dbg.h"

#define LEN(AT, FPC) (FPC - buffer - parser->AT)
#define MARK(M,FPC) (parser->M = (FPC) - buffer)
#define PTR_TO(F) (buffer + parser->F)


/** machine **/

#line 155 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"


/** Data **/

#line 54 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"
static const int httpclient_parser_start = 1;
static const int httpclient_parser_first_final = 120;
static const int httpclient_parser_error = 0;

static const int httpclient_parser_en_main = 1;


#line 158 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"


int httpclient_parser_init(httpclient_parser *parser)  {
	int cs = 0;
	

#line 66 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"
	{
		cs = (int)httpclient_parser_start;
	}
	
#line 163 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"

	
	parser->cs = cs;
	parser->body_start = 0;
	parser->content_len = -1;
	parser->chunked = 0;
	parser->chunks_done = 0;
	parser->mark = 0;
	parser->nread = 0;
	parser->field_len = 0;
	parser->field_start = 0;    
	parser->close = 0;
	
	return(1);
}


/** exec **/
int httpclient_parser_execute(httpclient_parser *parser, const char *buffer, size_t len, size_t off)  
{
	parser->nread = 0;
	parser->mark=0;
	parser->field_len = 0;
	parser->field_start = 0;
	const char *p, *pe;
	int cs = parser->cs;
	
	assert(off <= len && "offset past end of buffer");
	
	p = buffer+off;
	pe = buffer+len;
	
	assert(*pe == '\0' && "pointer does not end on NUL");
	assert(pe - p == (int)len - (int)off && "pointers aren't same distance");
	
	

#line 106 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"
{
		switch ( cs ) {
			case 1:
			goto st_case_1;
			case 0:
			goto st_case_0;
			case 2:
			goto st_case_2;
			case 120:
			goto st_case_120;
			case 3:
			goto st_case_3;
			case 4:
			goto st_case_4;
			case 5:
			goto st_case_5;
			case 6:
			goto st_case_6;
			case 7:
			goto st_case_7;
			case 8:
			goto st_case_8;
			case 9:
			goto st_case_9;
			case 10:
			goto st_case_10;
			case 11:
			goto st_case_11;
			case 12:
			goto st_case_12;
			case 13:
			goto st_case_13;
			case 14:
			goto st_case_14;
			case 15:
			goto st_case_15;
			case 16:
			goto st_case_16;
			case 17:
			goto st_case_17;
			case 18:
			goto st_case_18;
			case 19:
			goto st_case_19;
			case 20:
			goto st_case_20;
			case 21:
			goto st_case_21;
			case 22:
			goto st_case_22;
			case 23:
			goto st_case_23;
			case 24:
			goto st_case_24;
			case 25:
			goto st_case_25;
			case 26:
			goto st_case_26;
			case 27:
			goto st_case_27;
			case 28:
			goto st_case_28;
			case 29:
			goto st_case_29;
			case 30:
			goto st_case_30;
			case 31:
			goto st_case_31;
			case 32:
			goto st_case_32;
			case 33:
			goto st_case_33;
			case 34:
			goto st_case_34;
			case 35:
			goto st_case_35;
			case 36:
			goto st_case_36;
			case 37:
			goto st_case_37;
			case 38:
			goto st_case_38;
			case 39:
			goto st_case_39;
			case 40:
			goto st_case_40;
			case 41:
			goto st_case_41;
			case 42:
			goto st_case_42;
			case 43:
			goto st_case_43;
			case 44:
			goto st_case_44;
			case 45:
			goto st_case_45;
			case 46:
			goto st_case_46;
			case 47:
			goto st_case_47;
			case 48:
			goto st_case_48;
			case 49:
			goto st_case_49;
			case 50:
			goto st_case_50;
			case 51:
			goto st_case_51;
			case 52:
			goto st_case_52;
			case 53:
			goto st_case_53;
			case 54:
			goto st_case_54;
			case 55:
			goto st_case_55;
			case 56:
			goto st_case_56;
			case 57:
			goto st_case_57;
			case 58:
			goto st_case_58;
			case 59:
			goto st_case_59;
			case 60:
			goto st_case_60;
			case 61:
			goto st_case_61;
			case 62:
			goto st_case_62;
			case 63:
			goto st_case_63;
			case 64:
			goto st_case_64;
			case 65:
			goto st_case_65;
			case 66:
			goto st_case_66;
			case 67:
			goto st_case_67;
			case 68:
			goto st_case_68;
			case 69:
			goto st_case_69;
			case 70:
			goto st_case_70;
			case 71:
			goto st_case_71;
			case 121:
			goto st_case_121;
			case 72:
			goto st_case_72;
			case 73:
			goto st_case_73;
			case 74:
			goto st_case_74;
			case 75:
			goto st_case_75;
			case 76:
			goto st_case_76;
			case 77:
			goto st_case_77;
			case 78:
			goto st_case_78;
			case 79:
			goto st_case_79;
			case 80:
			goto st_case_80;
			case 81:
			goto st_case_81;
			case 82:
			goto st_case_82;
			case 83:
			goto st_case_83;
			case 84:
			goto st_case_84;
			case 85:
			goto st_case_85;
			case 86:
			goto st_case_86;
			case 87:
			goto st_case_87;
			case 88:
			goto st_case_88;
			case 122:
			goto st_case_122;
			case 89:
			goto st_case_89;
			case 90:
			goto st_case_90;
			case 91:
			goto st_case_91;
			case 92:
			goto st_case_92;
			case 93:
			goto st_case_93;
			case 94:
			goto st_case_94;
			case 95:
			goto st_case_95;
			case 96:
			goto st_case_96;
			case 97:
			goto st_case_97;
			case 98:
			goto st_case_98;
			case 99:
			goto st_case_99;
			case 100:
			goto st_case_100;
			case 101:
			goto st_case_101;
			case 102:
			goto st_case_102;
			case 103:
			goto st_case_103;
			case 104:
			goto st_case_104;
			case 105:
			goto st_case_105;
			case 106:
			goto st_case_106;
			case 107:
			goto st_case_107;
			case 108:
			goto st_case_108;
			case 109:
			goto st_case_109;
			case 110:
			goto st_case_110;
			case 111:
			goto st_case_111;
			case 112:
			goto st_case_112;
			case 113:
			goto st_case_113;
			case 114:
			goto st_case_114;
			case 115:
			goto st_case_115;
			case 123:
			goto st_case_123;
			case 116:
			goto st_case_116;
			case 117:
			goto st_case_117;
			case 118:
			goto st_case_118;
			case 119:
			goto st_case_119;
		}
		p+= 1;
		st_case_1:
		if ( p == pe )
			goto _out1;
		if ( ( (*( p))) == 72 ) {
			goto _ctr3;
		}
		if ( ( (*( p))) < 65 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto _ctr2;
			}
		} else if ( ( (*( p))) > 70 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 102 ) {
				goto _ctr2;
			}
		} else {
			goto _ctr2;
		}
		goto _st0;
		_st0:
		st_case_0:
		goto _out0;
		_ctr2:
			{
#line 52 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			MARK(mark, p); }
		
#line 384 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st2;
		_st2:
		p+= 1;
		st_case_2:
		if ( p == pe )
			goto _out2;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr5;
			}
			case 13: {
				goto _ctr6;
			}
			case 59: {
				goto _ctr7;
			}
		}
		if ( ( (*( p))) < 65 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto _st2;
			}
		} else if ( ( (*( p))) > 70 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 102 ) {
				goto _st2;
			}
		} else {
			goto _st2;
		}
		goto _st0;
		_ctr5:
			{
#line 93 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->chunked = 1;
			parser->content_len = strtol(PTR_TO(mark), NULL, 16);
			parser->chunks_done = parser->content_len <= 0;
			
			if(parser->chunks_done && parser->last_chunk) {
				parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
			} else if(parser->chunk_size != NULL) {
				parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
			} // else skip it
		}
		
#line 429 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

			{
#line 109 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->body_start = p - buffer + 1; 
			if(parser->header_done != NULL)
			parser->header_done(parser->data, p + 1, pe - p - 1);
			{p+= 1; cs = 120; goto _out;}
		}
		
#line 439 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st120;
		_ctr9:
			{
#line 109 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->body_start = p - buffer + 1; 
			if(parser->header_done != NULL)
			parser->header_done(parser->data, p + 1, pe - p - 1);
			{p+= 1; cs = 120; goto _out;}
		}
		
#line 451 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st120;
		_ctr13:
			{
#line 56 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->field_len = LEN(field_start, p);
		}
		
#line 460 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

			{
#line 60 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			MARK(mark, p); }
		
#line 465 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

			{
#line 70 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		
#line 474 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

			{
#line 109 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->body_start = p - buffer + 1; 
			if(parser->header_done != NULL)
			parser->header_done(parser->data, p + 1, pe - p - 1);
			{p+= 1; cs = 120; goto _out;}
		}
		
#line 484 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st120;
		_ctr20:
			{
#line 70 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		
#line 495 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

			{
#line 109 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->body_start = p - buffer + 1; 
			if(parser->header_done != NULL)
			parser->header_done(parser->data, p + 1, pe - p - 1);
			{p+= 1; cs = 120; goto _out;}
		}
		
#line 505 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st120;
		_ctr85:
			{
#line 66 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->close = 1;
		}
		
#line 514 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

			{
#line 109 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->body_start = p - buffer + 1; 
			if(parser->header_done != NULL)
			parser->header_done(parser->data, p + 1, pe - p - 1);
			{p+= 1; cs = 120; goto _out;}
		}
		
#line 524 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st120;
		_st120:
		p+= 1;
		st_case_120:
		if ( p == pe )
			goto _out120;
		goto _st0;
		_ctr6:
			{
#line 93 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->chunked = 1;
			parser->content_len = strtol(PTR_TO(mark), NULL, 16);
			parser->chunks_done = parser->content_len <= 0;
			
			if(parser->chunks_done && parser->last_chunk) {
				parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
			} else if(parser->chunk_size != NULL) {
				parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
			} // else skip it
		}
		
#line 547 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st3;
		_ctr14:
			{
#line 56 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->field_len = LEN(field_start, p);
		}
		
#line 556 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

			{
#line 60 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			MARK(mark, p); }
		
#line 561 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

			{
#line 70 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		
#line 570 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st3;
		_ctr21:
			{
#line 70 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		
#line 581 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st3;
		_ctr86:
			{
#line 66 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->close = 1;
		}
		
#line 590 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st3;
		_st3:
		p+= 1;
		st_case_3:
		if ( p == pe )
			goto _out3;
		if ( ( (*( p))) == 10 ) {
			goto _ctr9;
		}
		goto _st0;
		_ctr7:
			{
#line 93 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->chunked = 1;
			parser->content_len = strtol(PTR_TO(mark), NULL, 16);
			parser->chunks_done = parser->content_len <= 0;
			
			if(parser->chunks_done && parser->last_chunk) {
				parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
			} else if(parser->chunk_size != NULL) {
				parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
			} // else skip it
		}
		
#line 616 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st4;
		_ctr15:
			{
#line 56 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->field_len = LEN(field_start, p);
		}
		
#line 625 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

			{
#line 60 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			MARK(mark, p); }
		
#line 630 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

			{
#line 70 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		
#line 639 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st4;
		_ctr22:
			{
#line 70 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			if(parser->http_field != NULL) {
				parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
			}
		}
		
#line 650 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st4;
		_st4:
		p+= 1;
		st_case_4:
		if ( p == pe )
			goto _out4;
		switch( ( (*( p))) ) {
			case 33: {
				goto _ctr11;
			}
			case 124: {
				goto _ctr11;
			}
			case 126: {
				goto _ctr11;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto _ctr11;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto _ctr11;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto _ctr11;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _ctr11;
				}
			} else {
				goto _ctr11;
			}
		} else {
			goto _ctr11;
		}
		goto _st0;
		_ctr11:
			{
#line 54 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			MARK(field_start, p); }
		
#line 697 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st5;
		_st5:
		p+= 1;
		st_case_5:
		if ( p == pe )
			goto _out5;
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr13;
			}
			case 13: {
				goto _ctr14;
			}
			case 33: {
				goto _st5;
			}
			case 59: {
				goto _ctr15;
			}
			case 61: {
				goto _ctr16;
			}
			case 124: {
				goto _st5;
			}
			case 126: {
				goto _st5;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto _st5;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto _st5;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto _st5;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _st5;
				}
			} else {
				goto _st5;
			}
		} else {
			goto _st5;
		}
		goto _st0;
		_ctr16:
			{
#line 56 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			
			parser->field_len = LEN(field_start, p);
		}
		
#line 758 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

			{
#line 60 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			MARK(mark, p); }
		
#line 763 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"

		goto _st6;
		_st6:
		p+= 1;
		st_case_6:
		if ( p == pe )
			goto _out6;
		switch( ( (*( p))) ) {
			case 33: {
				goto _ctr18;
			}
			case 124: {
				goto _ctr18;
			}
			case 126: {
				goto _ctr18;
			}
		}
		if ( ( (*( p))) < 45 ) {
			if ( ( (*( p))) > 39 ) {
				if ( 42 <= ( (*( p))) && ( (*( p))) <= 43 ) {
					goto _ctr18;
				}
			} else if ( ( (*( p))) >= 35 ) {
				goto _ctr18;
			}
		} else if ( ( (*( p))) > 46 ) {
			if ( ( (*( p))) < 65 ) {
				if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
					goto _ctr18;
				}
			} else if ( ( (*( p))) > 90 ) {
				if ( 94 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _ctr18;
				}
			} else {
				goto _ctr18;
			}
		} else {
			goto _ctr18;
		}
		goto _st0;
		_ctr18:
			{
#line 60 "/home/Ricardo/ICEY/Ricardo/ricardo/./http/httpclient_parser.rl"
			MARK(mark, p); }
		
#line 810 "/home/Ricardo/ICEY/Ricardo/ricardo/http/httpclient_parser.rl.cc"
